RESOLVED FIXED45068
REGRESSION(r66431): WebCore::Editor::selectionStartCSSPropertyValue crashes if no background color is specified
https://bugs.webkit.org/show_bug.cgi?id=45068
Summary REGRESSION(r66431): WebCore::Editor::selectionStartCSSPropertyValue crashes i...
Ryosuke Niwa
Reported 2010-09-01 15:53:45 PDT
When there is no background color specified in any ancestor, execCommand('backColor') crashes WebKit. This is a regression from r66431 and major blocking bug for Chromium dev release. It affects hotmail.com and should be fixed promptly. http://crbug.com/54155
Attachments
Patch (4.10 KB, patch)
2010-09-01 16:06 PDT, Ryosuke Niwa
dglazkov: review+
Ryosuke Niwa
Comment 1 2010-09-01 16:06:35 PDT
Ryosuke Niwa
Comment 2 2010-09-01 16:07:28 PDT
Very embarrassing regression. The loop was missing a null check.
Dimitri Glazkov (Google)
Comment 3 2010-09-01 16:10:00 PDT
Comment on attachment 66297 [details] Patch ok.
Ryosuke Niwa
Comment 4 2010-09-01 16:19:03 PDT
Note You need to log in before you can comment on or make changes to this bug.