2010-09-01  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Dimitri Glazkov.

        REGRESSION(r66431): WebCore::Editor::selectionStartCSSPropertyValue crashes if no background color is specified
        https://bugs.webkit.org/show_bug.cgi?id=45068

        The crash was caused by the assumption that every node has an ancestor with some background color,
        which was obviously false. Fixed this by adding a null for ancestor.

        Test: editing/execCommand/backcolor-crash.html

        * editing/Editor.cpp:
        (WebCore::Editor::selectionStartCSSPropertyValue):
2010-09-01  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Dimitri Glazkov.

        REGRESSION(r66431): WebCore::Editor::selectionStartCSSPropertyValue crashes if no background color is specified
        https://bugs.webkit.org/show_bug.cgi?id=45068

        Added a test to ensure WebKit doesn't crash when backColor is queried on a node without any ancestors
        with a background color.

        * editing/execCommand/backcolor-crash-expected.txt: Added.
        * editing/execCommand/backcolor-crash.html: Added.


Canonical link: https://commits.webkit.org/57383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66624 268f45cc-cd09-0410-ab3c-d52691b4dbfc